# rustgo-ffi-wip

./: Cargo.toml  main.go  verify.h
src/: lib.rs  verify.h
